# libadvent

./: .gitignore  README.md  pyproject.toml
libadvent/: __init__.py  download.py  easter_egg_extractor.py  statistics.py
libadvent/templates/: solution.py  test.py
