[tool.poetry]
name = "libadvent"
version = "2022.11.26"
description = "Helper library for Advent of Code"
license = "MIT"
authors = ["Alexey Dubrov <vhsw@ya.ru>"]

[tool.poetry.scripts]
download = "libadvent.download:main"
update_stats = "libadvent.statistics:main"

[tool.poetry.dependencies]
python = ">=3.10,<4"
requests = "^2.28.1"
python-dotenv = "^0.19.2"
beautifulsoup4 = "^4.11.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
mypy = "^0.991"
black = "^22.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pylint]
[tool.pylint.basic]
good-names = ["fp"]
